--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/premium-vector/letter-hr-logo-icon-design-vector-image-template_1089444-314.jpg?semt=ais_hybrid&w=740&q=80" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HrManager</title>
   </head>
